--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
-      {
-        "command": "comment-inserter.helloWorld",
-        "title": "Hello World"
-      }
+        {
+            "command": "extension.insertComments",
+            "title": "Insert Comments"
+        }
     ]
-  },
+},
+
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "npm run check-types && npm run lint && node esbuild.js",
