--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
   "name": "comment-inserter",
   "displayName": "Comment Inserter",
-  "description": "",
-  "version": "0.0.1",
+  "description": "Inserts header comments to every java file.",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.93.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": ["*"], 
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
         "command": "extension.insertComments",
         "title": "Insert Comments"
+      },
+      {
+        "command": "extension.copyToDrive",
+        "title": "Copy to file Path"
       }
-    ]
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "Comment Inserter Settings",
+      "properties": {
+        "authorName": {
+          "type": "string",
+          "default": "",
+          "description": "The author name to insert in comments."
+        },
+        "drivePath": {
+          "type": "string",
+          "default": "",
+          "description": "The path to an arbitrary folder."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
