--- a/package.json
+++ b/package.json
@@ -10,36 +10,40 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": ["onStartupFinished"], 
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
         "command": "extension.insertComments",
         "title": "Insert Comments"
-      },
-      {
-        "command": "extension.copyToDrive",
-        "title": "Copy to file Path"
       }
     ],
     "configuration": {
       "type": "object",
       "title": "Comment Inserter Settings",
       "properties": {
-        "authorName": {
+        "commentInserter.authorName": {
           "type": "string",
           "default": "",
           "description": "The author name to insert in comments."
         },
-        "drivePath": {
-          "type": "string",
-          "default": "",
-          "description": "The path to an arbitrary folder."
+        "commentInserter.includeDate": {
+          "type": "boolean",
+          "default": true,
+          "description": "Include the date in the inserted comment."
+        },
+        "commentInserter.includeFileName": {
+          "type": "boolean",
+          "default": true,
+          "description": "Include the file name in the inserted comment."
         }
       }
     }
   },
+
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "npm run check-types && npm run lint && node esbuild.js",
